--- a/food/templates/viewEvent.html
+++ b/food/templates/viewEvent.html
@@ -5,9 +5,9 @@
     <link rel="stylesheet" type="text/css" href="/site_media/css/styles.css">
     <meta charset="utf-8">
     <title>jQuery UI Datepicker - Default functionality</title>
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
-    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
-    <script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+    <link rel="stylesheet" href="//codevent.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
+	<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+	<script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
 	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
 	<script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
 	<script type="text/javascript">
@@ -122,215 +122,40 @@
 <div id="map" style="width: 600px; height: 400px"></div>
 
 	<script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
-	<script>
-	/*
-	 * This code is representing a map mashup on the HTML page
-	 */
+	<script src="/site_media/js/dashboardMap.js"></script>
+	<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+	<script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+	<script type="text/javascript">
 	
-	//Representing the user icon on the map
-	var userIcon = L.icon({
-		iconUrl: '/site_media/img/markers/userMarker.png',
-
-		iconSize:     [40, 40], // size of the icon
-		popupAnchor:[0,-20],
-	});
+	var layerGroup =  L.layerGroup();
+	setLayerGroup(layerGroup);
 	
-	//Representing the user icon on the map
-	var homeIcon = L.icon({
-		iconUrl: '/site_media/img/markers/homeMarker.png',
-		iconSize:     [36, 51],
-        iconAnchor: [17, 51],
-		popupAnchor:[0,-31],
-	});
+	var markerArray = new Array();
+	setMarkerArray(markerArray);
 	
-	var cuisineIcon = L.Icon.extend({
-    options: {
-        iconSize:     [36, 51],
-        iconAnchor: [17, 51],
-		popupAnchor:[0,-31],
-    }
-	});
+	setFunctionality("ViewEvent");
 	
-	var africanMarker = new cuisineIcon({iconUrl: '/site_media/img/markers/africanMarker.png'}),
-    angloSaxonMarker = new cuisineIcon({iconUrl: '/site_media/img/markers/angloSaxonMarker.png'}),
-    arabMarker = new cuisineIcon({iconUrl: '/site_media/img/markers/arabMarker.png'}),
-	asianMarker = new cuisineIcon({iconUrl: '/site_media/img/markers/asianMarker.png'}),
-	bbqMarker = new cuisineIcon({iconUrl: '/site_media/img/markers/bbqMarker.png'}),
-	continentalMarker = new cuisineIcon({iconUrl: '/site_media/img/markers/continentalMarker.png'}),
-	experimentalMarker = new cuisineIcon({iconUrl: '/site_media/img/markers/experimentalMarker.png'}),
-	fusionMarker = new cuisineIcon({iconUrl: '/site_media/img/markers/fusionMarker.png'}),
-	indianMarker = new cuisineIcon({iconUrl: '/site_media/img/markers/indianMarker.png'}),
-	italianMarker = new cuisineIcon({iconUrl: '/site_media/img/markers/italianMarker.png'}),
-	kosherMarker = new cuisineIcon({iconUrl: '/site_media/img/markers/kosherMarker.png'}),
-	mediterraneanMarker = new cuisineIcon({iconUrl: '/site_media/img/markers/mediterraneanMarker.png'}),
-	mexicanMarker = new cuisineIcon({iconUrl: '/site_media/img/markers/mexicanMarker.png'}),
-	middleEastMarker = new cuisineIcon({iconUrl: '/site_media/img/markers/middleEastMarker.png'}),
-	nordicMarker = new cuisineIcon({iconUrl: '/site_media/img/markers/nordicMarker.png'}),
-	nouvelleMarker = new cuisineIcon({iconUrl: '/site_media/img/markers/nouvelleMarker.png'}),
-	oceanianMarker = new cuisineIcon({iconUrl: '/site_media/img/markers/oceanianMarker.png'}),
-	sushiMarker = new cuisineIcon({iconUrl: '/site_media/img/markers/sushiMarker.png'}),
-	vegetarianMarker = new cuisineIcon({iconUrl: '/site_media/img/markers/vegetarianMarker.png'}),
-	veganMarker = new cuisineIcon({iconUrl: '/site_media/img/markers/veganMarker.png'});
+	var events = new Array();
+	events = [];
 	
-	// This function returns the user location (coordinates) from the browser itself
-	function getLocation()
-	{
-	if (navigator.geolocation)
-		{
-			navigator.geolocation.getCurrentPosition(drawMap);
-		}
-	else{alert("Geolocation is not supported by this browser.");}
-	}
-
-	// This function is using the geolocation coordinates to draw the map
-	function drawMap(position) {
+	console.log(events.length);
 	
-	var latitude = position.coords.latitude;
-	var longitude = position.coords.longitude;
+	var event = {
+	latitude:{{event.latitude}},
+	longitude:{{event.longitude}},
+	cuisineType:"{{event.cuisineType}}",
+	id:{{event.pk}},
+	chef:{{event.chef.id}},
+	title:"{{event.title}}"
+	};
+	events[0]=event;
 
-	// here we define the map with the user's location center and zoom factor of 10
-	var map = L.map('map').setView([{{event.latitude}}, {{event.longitude}}], 10);
-	L.tileLayer('https://{s}.tiles.mapbox.com/v3/{id}/{z}/{x}/{y}.png', {
-		maxZoom: 18,
-		attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
-			'<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
-			'Imagery © <a href="http://mapbox.com">Mapbox</a>',
-		id: 'examples.map-i86knfo3'
-	}).addTo(map);
-
-	// here we add the marker representing the user's location
-	L.marker([latitude, longitude], {icon: userIcon}).addTo(map)
-		.bindPopup("You are here!").openPopup();
-		
-	// for each event on the DB we draw a new marker
-	{% for e in allEvents %}
-	if({{e.id}} == {{event.id}})
-	{
-		if({{e.chef.id}} == {{userId}})
-		{
-			L.marker([{{ e.latitude }}, {{ e.longitude }}],{icon: homeIcon}).addTo(map)
-		.bindPopup(" This e is yours! <br> <a href='http://ncegcolnx323:8080/viewEvent/{{e.id}}'>{{ e.title }}</a>");
-		}
-		else if("{{ e.cuisineType }}" == "African")
-		{
-			L.marker([{{ e.latitude }}, {{ e.longitude }}],{icon: africanMarker}).addTo(map)
-		.bindPopup("<a href='http://ncegcolnx323:8080/viewEvent/{{e.id}}'>{{ e.title }}</a>");
-		}
-		else if("{{ e.cuisineType }}" == "Anglo-Saxon")
-		{
-			L.marker([{{ e.latitude }}, {{ e.longitude }}],{icon: angloSaxonMarker}).addTo(map)
-		.bindPopup("<a href='http://ncegcolnx323:8080/viewEvent/{{e.id}}'>{{ e.title }}</a>");
-		}
-		else if("{{ e.cuisineType }}" == "Arab")
-		{
-			L.marker([{{ e.latitude }}, {{ e.longitude }}],{icon: arabMarker}).addTo(map)
-		.bindPopup("<a href='http://ncegcolnx323:8080/viewEvent/{{e.id}}'>{{ e.title }}</a>");
-		}
-		else if("{{ e.cuisineType }}" == "Asian")
-		{
-			L.marker([{{ e.latitude }}, {{ e.longitude }}],{icon: asianMarker}).addTo(map)
-		.bindPopup("<a href='http://ncegcolnx323:8080/viewEvent/{{e.id}}'>{{ e.title }}</a>");
-		}
-		else if("{{ e.cuisineType }}" == "Barbecue")
-		{
-			L.marker([{{ e.latitude }}, {{ e.longitude }}],{icon: bbqMarker}).addTo(map)
-		.bindPopup("<a href='http://ncegcolnx323:8080/viewEvent/{{e.id}}'>{{ e.title }}</a>");
-		}
-		else if("{{ e.cuisineType }}" == "Continental")
-		{
-			L.marker([{{ e.latitude }}, {{ e.longitude }}],{icon: continentalMarker}).addTo(map)
-		.bindPopup("<a href='http://ncegcolnx323:8080/viewEvent/{{e.id}}'>{{ e.title }}</a>");
-		}
-		else if("{{ e.cuisineType }}" == "Experimental")
-		{
-			L.marker([{{ e.latitude }}, {{ e.longitude }}],{icon: experimentalMarker}).addTo(map)
-		.bindPopup("<a href='http://ncegcolnx323:8080/viewEvent/{{e.id}}'>{{ e.title }}</a>");
-		}
-		else if("{{ e.cuisineType }}" == "Fusion")
-		{
-			L.marker([{{ e.latitude }}, {{ e.longitude }}],{icon: fusionMarker}).addTo(map)
-		.bindPopup("<a href='http://ncegcolnx323:8080/viewEvent/{{e.id}}'>{{ e.title }}</a>");
-		}
-		else if("{{ e.cuisineType }}" == "Indian")
-		{
-			L.marker([{{ e.latitude }}, {{ e.longitude }}],{icon: indianMarker}).addTo(map)
-		.bindPopup("<a href='http://ncegcolnx323:8080/viewEvent/{{e.id}}'>{{ e.title }}</a>");
-		}
-		else if("{{ e.cuisineType }}" == "Italian")
-		{
-			L.marker([{{ e.latitude }}, {{ e.longitude }}],{icon: italianMarker}).addTo(map)
-		.bindPopup("<a href='http://ncegcolnx323:8080/viewEvent/{{e.id}}'>{{ e.title }}</a>");
-		}
-		else if("{{ e.cuisineType }}" == "Kosher")
-		{
-			L.marker([{{ e.latitude }}, {{ e.longitude }}],{icon: kosherMarker}).addTo(map)
-		.bindPopup("<a href='http://ncegcolnx323:8080/viewEvent/{{e.id}}'>{{ e.title }}</a>");
-		}
-		else if("{{ e.cuisineType }}" == "Mediterranean")
-		{
-			L.marker([{{ e.latitude }}, {{ e.longitude }}],{icon: mediterraneanMarker}).addTo(map)
-		.bindPopup("<a href='http://ncegcolnx323:8080/viewEvent/{{e.id}}'>{{ e.title }}</a>");
-		}
-		else if("{{ e.cuisineType }}" == "Mexican")
-		{
-			L.marker([{{ e.latitude }}, {{ e.longitude }}],{icon: mexicanMarker}).addTo(map)
-		.bindPopup("<a href='http://ncegcolnx323:8080/viewEvent/{{e.id}}'>{{ e.title }}</a>");
-		}
-		else if("{{ e.cuisineType }}" == "Middle-East")
-		{
-			L.marker([{{ e.latitude }}, {{ e.longitude }}],{icon: middleEastMarker}).addTo(map)
-		.bindPopup("<a href='http://ncegcolnx323:8080/viewEvent/{{e.id}}'>{{ e.title }}</a>");
-		}
-		else if("{{ e.cuisineType }}" == "Nordic")
-		{
-			L.marker([{{ e.latitude }}, {{ e.longitude }}],{icon: nordicMarker}).addTo(map)
-		.bindPopup("<a href='http://ncegcolnx323:8080/viewEvent/{{e.id}}'>{{ e.title }}</a>");
-		}
-		else if("{{ e.cuisineType }}" == "Nouvelle")
-		{
-			L.marker([{{ e.latitude }}, {{ e.longitude }}],{icon: nouvelleMarker}).addTo(map)
-		.bindPopup("<a href='http://ncegcolnx323:8080/viewEvent/{{e.id}}'>{{ e.title }}</a>");
-		}
-		else if("{{ e.cuisineType }}" == "Oceanian")
-		{
-			L.marker([{{ e.latitude }}, {{ e.longitude }}],{icon: oceanianMarker}).addTo(map)
-		.bindPopup("<a href='http://ncegcolnx323:8080/viewEvent/{{e.id}}'>{{ e.title }}</a>");
-		}
-		else if("{{ e.cuisineType }}" == "Sushi")
-		{
-			L.marker([{{ e.latitude }}, {{ e.longitude }}],{icon: sushiMarker}).addTo(map)
-		.bindPopup("<a href='http://ncegcolnx323:8080/viewEvent/{{e.id}}'>{{ e.title }}</a>");
-		}
-		else if("{{ e.cuisineType }}" == "Vegetarian")
-		{
-			L.marker([{{ e.latitude }}, {{ e.longitude }}],{icon: vegetarianMarker}).addTo(map)
-		.bindPopup("<a href='http://ncegcolnx323:8080/viewEvent/{{e.id}}'>{{ e.title }}</a>");
-		}
-		else if("{{ e.cuisineType }}" == "Vegan")
-		{
-			L.marker([{{ e.latitude }}, {{ e.longitude }}],{icon: veganMarker}).addTo(map)
-		.bindPopup("<a href='http://ncegcolnx323:8080/viewEvent/{{e.id}}'>{{ e.title }}</a>");
-		}
-		else{
-			L.marker([{{ e.latitude }}, {{ e.longitude }}]).addTo(map)
-		.bindPopup("<a href='http://ncegcolnx323:8080/viewEvent/{{e.id}}'>{{ e.title }}</a>");
-		}
-	}
-	{% endfor %}
-	var popup = L.popup();
-
-	// this function deals with the onClick event
-	function onMapClick(e) {
-		popup
-			.setLatLng(e.latlng)
-			.setContent("You clicked the map at " + e.latlng.toString())
-			.openOn(map);
-	}
-
-	map.on('click', onMapClick);
-	}
-
-	getLocation();
+	console.log(events.length);
+	
+	setUserId({{userId}});
+	setEvents(events);
+	setCsrfToken({{csrfToken}});
+	onload = getLocation();
 	
 	</script>
 	</div>
