--- a/food/templates/insert.html
+++ b/food/templates/insert.html
@@ -68,17 +68,17 @@
 			<h1></h1>
 			<div class="user_panel">
 				{% if notifications %}
-				<a href="{% url food.views.viewNotifications %}">
+				<a href="{% url 'food.views.viewNotifications' %}">
 				<input type="image" id="myimage" src="/site_media/img/notificationOn.png" title="Notifications" style="display: block;"/><div class="blink_me"> Notifications! </div></a>
 				
 				{% else %}
-				<a href="{% url food.views.viewNotifications %}">
+				<a href="{% url 'food.views.viewNotifications' %}">
 				<input type="image" id="myimage" src="/site_media/img/notificationOff.png" title="Notifications" style="display: block;"/>
 				</a>
 				{% endif %}
 				<br>
 				<br>
-				<a href="/logout/">Logout</a> | <a href="{% url food.views.viewUserProfile user_id=userId %}">Profile</a>				
+				<a href="/logout/">Logout</a> | <a href="{% url 'food.views.viewUserProfile' user_id=userId %}">Profile</a> | <a href="{% url 'food.views.viewMessages' %}">Messages</a>		
 			</div>
 		</header>
 		</div>
@@ -101,16 +101,16 @@
 	{% else %}
 	<li>on {{ event.dateOfEvent }} : {{ event.title }} - {{event.address}}</li>
 	{% endif %}
-    <td><a href="{% url food.views.viewEvent event_id=event.pk %}">See Event</a></td>
+    <td><a href="{% url 'food.views.viewEvent' event_id=event.pk %}">See Event</a></td>
 	{% if event.chef.id == userId %}
-	<td><a href="{% url food.views.deleteEvent event_id=event.pk %}">Delete</a></td>
+	<td><a href="{% url 'food.views.deleteEvent' event_id=event.pk %}">Delete</a></td>
 	{% endif %}
 {% endfor %}
 </ul>
 </div>
 <div class="createEvent">
 	<h2> Create an Event </h2>
-    <form id="createEvent" action="{% url food.views.createEvent %}" method="post" class="niceform" novalidate>{% csrf_token %}
+    <form id="createEvent" action="{% url 'food.views.createEvent' %}" method="post" class="niceform" novalidate>{% csrf_token %}
         <dl>
             <dt> Title : </dt>
             <dd>{{ form.title }}</dd>
