--- a/food/templates/searchEventsResults.html
+++ b/food/templates/searchEventsResults.html
@@ -17,17 +17,17 @@
             <h1></h1>
             <div class="user_panel">
 				{% if notifications %}
-				<a href="{% url food.views.viewNotifications %}">
+				<a href="{% url 'food.views.viewNotifications' %}">
 				<input type="image" id="myimage" src="/site_media/img/notificationOn.png" title="Notifications" style="display: block;"/><div class="blink_me"> Notifications! </div></a>
 				
 				{% else %}
-				<a href="{% url food.views.viewNotifications %}">
+				<a href="{% url 'food.views.viewNotifications' %}">
 				<input type="image" id="myimage" src="/site_media/img/notificationOff.png" title="Notifications" style="display: block;"/>
 				</a>
 				{% endif %}
 				<br>
 				<br>
-                <a href="/logout/">Logout</a> | <a href="{% url food.views.viewUserProfile user_id=userId %}">Profile</a> |
+                <a href="/logout/">Logout</a> | <a href="{% url 'food.views.viewUserProfile' user_id=userId %}">Profile</a> |
 				<a href="/insertview/">Home</a>
             </div>
         </header>
@@ -42,9 +42,9 @@
 <ul>
 {% for event in outputEvents %}
     <li>on {{ event.dateOfEvent }} : {{ event.title }} - {{event.description}}</li>
-    <td><a href="{% url food.views.viewEvent event_id=event.pk %}">See Event</a></td>
+    <td><a href="{% url 'food.views.viewEvent' event_id=event.pk %}">See Event</a></td>
 	 {% if event.chef.id == userId %}
-		<td><a href="{% url food.views.deleteEvent event_id=event.pk %}">Delete</a></td>
+		<td><a href="{% url 'food.views.deleteEvent' event_id=event.pk %}">Delete</a></td>
 	{% endif %} 
 {% endfor %}
 </ul>
